--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -29,6 +29,13 @@
     <th:block layout:fragment="addScript"></th:block>
 </head>
 <body>
-
+    <!-- 공통 헤더 <header th:fragment="common"> -->
+    <header th:replace="~{front/outlines/_header::common}"></header>
+    <!--  치환될 각 페이지의 바디  -->
+    <main layout:fragment="content"></main>
+    <!-- 공통 푸터 <footer th:fragment="common"> -->
+    <footer th:replace="~{front/outlines/_footer::common}"></footer>
+    <!-- 히든프레임 -->
+    <iframe name="ifrmHidden" class="dn"></iframe>
 </body>
 </html>
