--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -25,6 +25,13 @@
     <script th:src="@{/common/js/common.js}"></script>
     <!-- main 페이지 js   -->
     <script th:src="@{/front/js/common.js}"></script>
+
+
+    <script th:if="${addCommonScript != null}" th:each="jsFile : ${addCommonScript}" th:src="@{/common/js/{file}.js(file=${jsFile})}"></script>
+    <th:block layout:fragment="addCommonScript"></th:block>
+
+
+
     <!-- 다른페이지에서 추가될 js  -->
     <script th:if="${addScript != null}" th:each="jsFile : ${addScript}" th:src="@{/front/js/{file}.js(file=${jsFile})}"></script>
     <!-- addViewController 추가된 뷰구성   -->
