--- a/src/main/resources/templates/front/member/join.html
+++ b/src/main/resources/templates/front/member/join.html
@@ -7,6 +7,7 @@
         <h1 th:text="#{회원가입}"></h1>
         <form name="frmRegist" method="POST" th:action="@{/member/join}" autocomplete="off" th:object="${requestJoin}">
             <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
+            <input type="hidden" name="gid" th:field="*{gid}">
             <dl>
                 <dt th:text="#{이메일}"></dt>
                 <dd>
@@ -49,10 +50,18 @@
                 <label for="agree" th:text="${회원가입_약관_동의}"></label>
                 <div class="error" th:each="err : ${#fields.errors('agree')}" th:text="${err}"></div>
             </div>
+            <dl>
+                <dt th:text="#{프로필_이미지}"></dt>
+                <dd>
+                    <div class="profile-image"></div>
+                    <button type="button" th:text="#{이미지_업로드}" class="fileUploads" th:data-gid="*{gid}" th:data-single></button>
+                </dd>
+            </dl>
             <div class="buttons">
                 <button type="button" th:text="#{다시입력}"></button>
                 <button type="submit" th:text="#{가입하기}"></button>
             </div>
         </form>
+        <script th:replace="~{common/_file_tpl::image}"></script>
     </main>
 </html>
